API query on index.component

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <app-root></app-root>
@@ -27,9 +27,11 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/js/mdb.min.js"></script>
 </body>
 </html>
+
 <style>
 body{
-    background: #b92b27;
-    background: -webkit-linear-gradient(to right,#1565C0,#b92b27);
-    background: linear-gradient(to right,#1565C0,#b92b27);
-}</style>
+  background: #db3583;
+    background: -webkit-linear-gradient(to right,rgb(70, 118, 221),#db3583);
+    background: linear-gradient(to right,rgb(70, 118, 221),#db3583);
+}
+</style>
